wip(HTML/Hard/2)[fix-ui]: benerin header biar ada gapnya

--- a/HTML Dasar/Easy/2-tugas/scss/main.scss
+++ b/HTML Dasar/Easy/2-tugas/scss/main.scss
@@ -35,14 +35,19 @@ body{
     text-transform: uppercase;
     text-align: left;
 
-      th:not(:last-child){
-        width: 200px;
-      }
+    tr{
+      display: flex;
+      gap: 16px;
+    }
 
-      th:last-child{
+    th:not(:last-child){
+        width: 200px;
+    }
+
+    th:last-child{
         width: 48px;
         text-align: center;
-      }
+    }
   }
 
   &__body{
